objects/litify_pm__Default_Matter_Task__c.object
<CustomObject>
    <fields>
        <fullName>Concatfordataload__c</fullName>
        <formula>CASESAFEID(litify_pm__Matter_Stage__r.Id)&amp;  Name</formula>
        <label>Concatfordataload</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldSFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>OldSFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>litify_tso_Matter_Stage_Name__c</fullName>
        <description>Populated by a process and used to show Matter Stage Name as secondary field in search layout.</description>
        <label>Matter Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>